manifests/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  selector:
    app: jenkins
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
